--- a/app/src/main/res/layout/item_bluetooth.xml
+++ b/app/src/main/res/layout/item_bluetooth.xml
@@ -4,13 +4,14 @@
               android:layout_height="wrap_content"
               android:baselineAligned="false"
               android:gravity="center"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:padding="10dp">
 
     <TextView
         android:textColor="@color/black"
         android:id="@+id/item_text"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="16sp"/>
 
@@ -19,6 +20,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:textSize="14sp"/>
-
+        android:textSize="14sp"
+        android:visibility="gone"/>
+    <TextView
+        android:id="@+id/tv_conn_state"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textSize="14sp"
+        android:textColor="@color/black"/>
 </LinearLayout>
