--- a/app/src/main/res/layout/item_bluetooth.xml
+++ b/app/src/main/res/layout/item_bluetooth.xml
@@ -12,6 +12,9 @@
         android:id="@+id/item_text"
         android:layout_width="0dp"
         android:layout_weight="1"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:text="asd"
         android:layout_height="wrap_content"
         android:textSize="16sp"/>
 
@@ -26,7 +29,15 @@
         android:id="@+id/tv_conn_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:textSize="14sp"
-        android:textColor="@color/black"/>
+        android:gravity="center"
+        android:text="asd"
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="center_vertical"
+        android:textColor="#ff0000"/>
+    <ImageView android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/icon_to"
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="center"/>
 </LinearLayout>
