--- a/app/src/main/res/layout/layout_titile.xml
+++ b/app/src/main/res/layout/layout_titile.xml
@@ -5,7 +5,9 @@
     <ImageView android:id="@+id/iv_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"/>
+        android:layout_gravity="left|center_vertical"
+        android:padding="15dp"
+        android:src="@mipmap/icon_back"/>
     <TextView android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
