--- a/app/src/main/res/layout/activity_order_list.xml
+++ b/app/src/main/res/layout/activity_order_list.xml
@@ -7,6 +7,9 @@
         android:id="@+id/smart_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <LinearLayout android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
         <TextView android:id="@+id/tv_conn_state"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -14,10 +17,12 @@
             android:textColor="#ff0000"
             android:padding="7dp"
             android:text="@string/label_no_conn"/>
-    <ListView
-        android:id="@+id/lv_order_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none"/>
+        <ListView
+            android:id="@+id/lv_order_list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:scrollbars="none"/>
+        </LinearLayout>
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 </LinearLayout>
