--- a/app/src/main/res/layout/item_bluetooth.xml
+++ b/app/src/main/res/layout/item_bluetooth.xml
@@ -12,8 +12,8 @@
         android:id="@+id/item_text"
         android:layout_width="0dp"
         android:layout_weight="1"
-        android:gravity="center"
-        android:layout_gravity="center"
+        android:gravity="center_vertical"
+        android:layout_gravity="center_vertical"
         android:text="asd"
         android:layout_height="wrap_content"
         android:textSize="16sp"/>
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:gravity="center"
-        android:text="asd"
+        android:text=""
         android:layout_marginLeft="10dp"
         android:layout_gravity="center_vertical"
         android:textColor="#ff0000"/>
