--- a/app/src/main/res/layout/layout_titile.xml
+++ b/app/src/main/res/layout/layout_titile.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="48dp">
@@ -21,3 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </FrameLayout>
+    <View android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#45999999"/>
+</LinearLayout>
