--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,4 +3,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <include layout="@layout/layout_titile"/>
+    <TextView
+        android:id="@+id/tv_change_account"
+        android:layout_width="200dp"
+        android:layout_height="48dp"
+        android:text="切换账号"
+        android:gravity="center"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/bg_white_radius_5"
+        android:layout_gravity="center_horizontal"
+        />
 </LinearLayout>
