--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,27 @@
         android:background="@drawable/bg_white_radius_5"
         android:layout_gravity="center_horizontal"
         />
+    <TextView
+        android:id="@+id/tv_test_print"
+        android:layout_width="200dp"
+        android:layout_height="48dp"
+        android:text="测试打印"
+        android:gravity="center"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/bg_text_selector"
+        android:layout_gravity="center_horizontal"
+        />
+    <TextView
+        android:id="@+id/tv_new_order"
+        android:layout_width="200dp"
+        android:layout_height="48dp"
+        android:text="添加新订单"
+        android:gravity="center"
+        android:visibility="gone"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/bg_white_radius_5"
+        android:layout_gravity="center_horizontal"
+        />
     <!--<TextView-->
         <!--android:id="@+id/tv_stop_bluetooth"-->
         <!--android:layout_width="200dp"-->
